# MotionExtractor

./: README.md  fileProcessing.py  imagetest.py  main.py  vidAlgos.py  videotest.py
processedOutputFiles/: finished.mov
src/: CMakeLists.txt  main.cpp
testVideoAssets/: carvid.mov  logo.mov  outdoor.mov  overhead.mov  rear.mov  tire.mov
